<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home_page" />

        <item
            android:id="@+id/productsFragment"
            android:icon="@drawable/ic_basket"
            android:title="@string/products_page" />

        <item
            android:id="@+id/employeeFragment"
            android:icon="@drawable/ic_employee"
            android:title="@string/employee_page" />

        <item
            android:id="@+id/calculationFragment"
            android:icon="@drawable/ic_calculate"
            android:title="Xisoblash" />
    </group>

</menu>